k8s/overlays/prod/gitea-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-lb
  labels:
    app: gitea
spec:
  type: LoadBalancer
  selector:
    app: gitea
  ports:
    - port: 3000
      targetPort: 3000
      name: http
