k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: flatnotes.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flatnotes-svc
                port:
                  number: 8080
    - host: gitea.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-svc
                port:
                  number: 3000
